--- a/index.html
+++ b/index.html
@@ -12,30 +12,28 @@
 </head>
 
 <body class="container-fluid">
-  <div class="bg svg">
-    <header class="navbar row align-items-start">
-      <div class="col-12 col-sm-2">
-        <img class="img"
-          src="https://cbsnews1.cbsistatic.com/hub/i/2011/03/01/e987e8dc-a643-11e2-a3f0-029118418759/rango_1.png"
-          alt="rango">
-      </div>
-      <div class="col-6">
-        <div class="row justify-content-between text-white">
-          <div class="col-3 col-med-2">
-            TESTER
-          </div>
-          <div class="col-3 col-med-2">
-            TESTER
-          </div>
-          <div class="col-3 col-med-2">
-            TESTER
-          </div>
-          <div class="col-3 col-med-2">
-            TESTER
-          </div>
+  <div class="navbar bg row align-items-start">
+    <div class="col-6">
+      <img class="img"
+        src="https://cbsnews1.cbsistatic.com/hub/i/2011/03/01/e987e8dc-a643-11e2-a3f0-029118418759/rango_1.png"
+        alt="rango">
+    </div>
+    <div class="col-6">
+      <div class="row justify-content-end">
+        <div class="col-2 col-med-2 mr-1 ml-1">
+          &target;
+        </div>
+        <div class="col-2 col-med-2 mr-1 ml-1">
+          &target;
+        </div>
+        <div class="col-2 col-med-2 mr-1 ml-1">
+          &target;
+        </div>
+        <div class="col-2 col-med-2 mr-1 ml-1">
+          &target;
         </div>
       </div>
-    </header>
+    </div>
     <div class="row align-items-end justify-content-between">
       <div class="col-3 ml-2 text-center">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est possimus adipisci alias. Et dolorem, suscipit
@@ -43,7 +41,7 @@
         facilis alias!
         <br>
         <div class="row justify-content-center">
-          <button class="btn btn-warning">BUTTON</button>
+          <button class="btn btn-danger">BUTTON</button>
         </div>
       </div>
       <div class="col-5 iframe">
@@ -52,7 +50,7 @@
       </div>
     </div>
   </div>
-  <div class="row row-two mt-2 align-items-center justify-content-around text-center">
+  <div class="row row-two align-items-center justify-content-around text-center">
     <div class="card-position col-3">
       <img class="img-card"
         src="https://cbsnews1.cbsistatic.com/hub/i/2011/03/01/e987e8dc-a643-11e2-a3f0-029118418759/rango_1.png" alt="">
@@ -96,6 +94,7 @@
       </div>
     </div>
   </div>
+  <div class="row card-row row-break"></div>
   <div class="row row-three align-items-end justify-content-around">
     <div class="col-5 bg-two">
       <iframe width="420" height="315" src="https://www.youtube.com/embed/VkOG3e2WS34">
@@ -121,14 +120,17 @@
     </div>
   </div>
   <div class="row align-items-end justify-content-center row-four">
-    <img class="logo" src="https://cdn.freebiesupply.com/logos/thumbs/2x/san-jose-sharks-logo.png" alt="sj logo">
-  </div>
-  <div class="row justify-content-between footer break">
-    <div class="ml-3">
-      TESTER
+    <div class="col-2 text-center align-self-center">
+      <img class="logo" src="https://cdn.freebiesupply.com/logos/thumbs/2x/san-jose-sharks-logo.png" alt="sj logo">
+      <p>San Jose Sharks</p>
     </div>
-    <div class="mr-3">
-      TESTER
+  </div>
+  <div class="row justify-content-between footer row-break">
+    <div class="mt-1 mb-1 mr-1 ml-1">
+      &target;
+    </div>
+    <div class="mt-1 mb-1 mr-1 ml-1">
+      &target;
     </div>
   </div>
 </body>
