--- a/index.html
+++ b/index.html
@@ -12,30 +12,31 @@
 </head>
 
 <body class="container-fluid">
-  <div class="navbar bg row align-items-start">
-    <div class="col-6">
+  <!-- SECTION DONT TOUCH ME  -->
+  <div class="navbar bg row align-items-start justify-content-between">
+    <div class="col-lg-6">
       <img class="img"
         src="https://cbsnews1.cbsistatic.com/hub/i/2011/03/01/e987e8dc-a643-11e2-a3f0-029118418759/rango_1.png"
         alt="rango">
     </div>
-    <div class="col-6">
-      <div class="row justify-content-end">
-        <div class="col-2 col-med-2 mr-1 ml-1">
+    <div class="col-lg-6">
+      <div class="row justify-content-end text-center">
+        <div class="col-12 col-lg-2 mr-1 ml-1">
           &target;
         </div>
-        <div class="col-2 col-med-2 mr-1 ml-1">
+        <div class="col-12 col-lg-2 mr-1 ml-1">
           &target;
         </div>
-        <div class="col-2 col-med-2 mr-1 ml-1">
+        <div class="col-12 col-lg-2 mr-1 ml-1">
           &target;
         </div>
-        <div class="col-2 col-med-2 mr-1 ml-1">
+        <div class="col-12 col-lg-2 mr-1 ml-1">
           &target;
         </div>
       </div>
     </div>
     <div class="row align-items-end justify-content-between">
-      <div class="col-3 ml-2 text-center">
+      <div class="col-12 order-2 order-lg-1 col-lg-5 ml-2 text-center">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est possimus adipisci alias. Et dolorem, suscipit
         quibusdam asperiores debitis dolores officiis voluptatem earum, molestiae nesciunt fuga velit minus praesentium
         facilis alias!
@@ -44,14 +45,15 @@
           <button class="btn btn-danger">BUTTON</button>
         </div>
       </div>
-      <div class="col-5 iframe">
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/DOWbvYYzAzQ">
+      <div class="col-12 order-1 col-lg-5 order-lg-2 iframe">
+        <iframe width="370" height="265" src="https://www.youtube.com/embed/DOWbvYYzAzQ">
         </iframe>
       </div>
     </div>
   </div>
+  <!-- !SECTION -->
   <div class="row row-two align-items-center justify-content-around text-center">
-    <div class="card-position col-3">
+    <div class="card-position col-12 col-lg-3">
       <img class="img-card"
         src="https://cbsnews1.cbsistatic.com/hub/i/2011/03/01/e987e8dc-a643-11e2-a3f0-029118418759/rango_1.png" alt="">
       <div class="card bg-dark mt-2" style="width: 18rem;">
@@ -65,7 +67,7 @@
         </div>
       </div>
     </div>
-    <div class="card-position col-3">
+    <div class="card-position col-12 col-lg-3">
       <img class="img-card"
         src="https://cbsnews1.cbsistatic.com/hub/i/2011/03/01/e987e8dc-a643-11e2-a3f0-029118418759/rango_1.png" alt="">
       <div class="card bg-dark mt-2" style="width: 18rem;">
@@ -79,7 +81,7 @@
         </div>
       </div>
     </div>
-    <div class="card-position col-3">
+    <div class="card-position col-12 col-lg-3">
       <img class="img-card"
         src="https://cbsnews1.cbsistatic.com/hub/i/2011/03/01/e987e8dc-a643-11e2-a3f0-029118418759/rango_1.png" alt="">
       <div class="card bg-dark mt-2" style="width: 18rem;">
@@ -96,31 +98,21 @@
   </div>
   <div class="row card-row row-break"></div>
   <div class="row row-three align-items-end justify-content-around">
-    <div class="col-5 bg-two">
-      <iframe width="420" height="315" src="https://www.youtube.com/embed/VkOG3e2WS34">
+    <div class="col-12 col-lg-5 bg-two">
+      <iframe width="370" height="265" src="https://www.youtube.com/embed/VkOG3e2WS34">
       </iframe>
     </div>
-    <div class="col-5 border border-rounded mb-2">
+    <div class="col-12 col-lg-5 border border-rounded mb-2 text-center">
       <h6>
-        The San Jose Sharks started rewriting their NHL playoff destiny in just over four minutes in the third period
-        against the Vegas Golden Knights on Tuesday.<br>
-        Down 3–0 with 10:47 to play, Golden Knights center Cody Eakin was issued a five-minute major for cross-checking
-        on
-        Sharks captain Joe Pavelski. Pavelski suffered an apparent head injury as a result and was helped off the ice
-        while bleeding.<br>
-        Seven seconds later, Logan Courture netted the Sharks' first goal of the night. Game 6 overtime hero Tomas Hertl
-        scored another power play goal with 9:51 left to play before Courture and Kevin Labanc found the net to give the
-        Sharks a 4–3 lead with 6:39 to play.<br>
-        San Jose scored a miraculous four goals in 4:01 despite entering Game 7 just 4–25 on the power play.
-        Jonathan Marchessault tied the game at 4–4 with a goal of his own with 47 seconds left in the game, sending the
-        matchup into overtime to decide who moves on to Round 2.<br>
-        The game would need almost an entire overtime period, with Barclay Goodrow scoring 18:19 into OT to cap off the
-        Game 7 madness with a 5–4 win.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus amet laudantium odit hic dolor quas ipsa, quos,
+        odio, quaerat facere neque illum. Minima reprehenderit obcaecati accusamus nihil maiores veritatis est. Lorem,
+        ipsum dolor sit amet consectetur adipisicing elit. Possimus aperiam soluta id beatae esse sit porro, qui ratione
+        eveniet dolore omnis debitis tempora molestiae maiores quibusdam fuga aut quisquam suscipit?
       </h6>
     </div>
   </div>
   <div class="row align-items-end justify-content-center row-four">
-    <div class="col-2 text-center align-self-center">
+    <div class="col-12 col-lg-2 text-center align-self-center">
       <img class="logo" src="https://cdn.freebiesupply.com/logos/thumbs/2x/san-jose-sharks-logo.png" alt="sj logo">
       <p>San Jose Sharks</p>
     </div>
