--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
       </div>
     </div>
     <div class="row align-items-end justify-content-between">
-      <div class="col-12 order-2 order-lg-1 col-lg-5 ml-2 text-center">
+      <div class="col-12 order-2 order-lg-1 col-lg-5 text-center">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est possimus adipisci alias. Et dolorem, suscipit
         quibusdam asperiores debitis dolores officiis voluptatem earum, molestiae nesciunt fuga velit minus praesentium
         facilis alias!
         <br>
         <div class="row justify-content-center">
-          <button class="btn btn-danger">BUTTON</button>
+          <div class="col-4">
+            <button class="btn btn-danger">BUTTON</button>
+          </div>
         </div>
       </div>
       <div class="col-12 order-1 col-lg-5 order-lg-2 iframe">
