all done but card alignment & gradient

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     </div>
     <div class="col-lg-6">
       <div class="row justify-content-end text-center">
-        <div class="col-12 col-lg-2 mr-1 ml-1">
+        <div class="col-12 col-lg-2 tester mr-1 ml-1 mt-1">
           &target;
         </div>
-        <div class="col-12 col-lg-2 mr-1 ml-1">
+        <div class="col-12 col-lg-2 tester mr-1 ml-1 mt-1">
           &target;
         </div>
-        <div class="col-12 col-lg-2 mr-1 ml-1">
+        <div class="col-12 col-lg-2 tester mr-1 ml-1 mt-1">
           &target;
         </div>
-        <div class="col-12 col-lg-2 mr-1 ml-1">
+        <div class="col-12 col-lg-2 tester mr-1 ml-1 mt-1">
           &target;
         </div>
       </div>
@@ -54,8 +54,8 @@
     </div>
   </div>
   <!-- !SECTION -->
-  <div class="row row-two align-items-center justify-content-around text-center">
-    <div class="card-position col-12 col-lg-3">
+  <div class="row row-two align-items-center justify-content-around">
+    <div class="card-position col-12 col-lg-3 text-center">
       <img class="img-card"
         src="https://cbsnews1.cbsistatic.com/hub/i/2011/03/01/e987e8dc-a643-11e2-a3f0-029118418759/rango_1.png" alt="">
       <div class="card bg-dark mt-2" style="width: 18rem;">
@@ -69,7 +69,7 @@
         </div>
       </div>
     </div>
-    <div class="card-position col-12 col-lg-3">
+    <div class="card-position col-12 col-lg-3 text-center">
       <img class="img-card"
         src="https://cbsnews1.cbsistatic.com/hub/i/2011/03/01/e987e8dc-a643-11e2-a3f0-029118418759/rango_1.png" alt="">
       <div class="card bg-dark mt-2" style="width: 18rem;">
@@ -83,7 +83,7 @@
         </div>
       </div>
     </div>
-    <div class="card-position col-12 col-lg-3">
+    <div class="card-position col-12 col-lg-3 text-center">
       <img class="img-card"
         src="https://cbsnews1.cbsistatic.com/hub/i/2011/03/01/e987e8dc-a643-11e2-a3f0-029118418759/rango_1.png" alt="">
       <div class="card bg-dark mt-2" style="width: 18rem;">
@@ -98,8 +98,9 @@
       </div>
     </div>
   </div>
+  <!-- SECTION DONT TOUCH ME -->
   <div class="row card-row row-break"></div>
-  <div class="row row-three align-items-end justify-content-around">
+  <div class="row row-three align-items-center justify-content-around">
     <div class="col-12 col-lg-5 bg-two">
       <iframe width="370" height="265" src="https://www.youtube.com/embed/VkOG3e2WS34">
       </iframe>
@@ -120,13 +121,14 @@
     </div>
   </div>
   <div class="row justify-content-between footer row-break">
-    <div class="mt-1 mb-1 mr-1 ml-1">
+    <div class="tester text-dark mt-1 mb-1 mr-1 ml-1">
       &target;
     </div>
-    <div class="mt-1 mb-1 mr-1 ml-1">
+    <div class="tester text-dark mt-1 mb-1 mr-1 ml-1">
       &target;
     </div>
   </div>
+  <!--!SECTION -->
 </body>
 
 </html>
