mobile done, images/cards shift independently

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
   <div class="row card-row row-break"></div>
   <div class="row row-three align-items-center justify-content-around">
     <div class="col-12 col-lg-5 bg-two">
-      <iframe width="370" height="265" src="https://www.youtube.com/embed/VkOG3e2WS34">
+      <iframe class="mt-2" width="370" height="265" src="https://www.youtube.com/embed/VkOG3e2WS34">
       </iframe>
     </div>
-    <div class="col-12 col-lg-5 border border-rounded mb-2 text-center">
+    <div class="col-12 col-lg-5 mb-2 text-center">
       <h6>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus amet laudantium odit hic dolor quas ipsa, quos,
         odio, quaerat facere neque illum. Minima reprehenderit obcaecati accusamus nihil maiores veritatis est. Lorem,
